<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/nav_received_presents">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_families_view"
                    android:icon="@drawable/round_people_24"
                    android:title="@string/nav_families_view" />
                <item
                    android:id="@+id/nav_names_view"
                    android:icon="@drawable/round_person_24"
                    android:title="@string/nav_names_view" />
                <item
                    android:id="@+id/nav_unbought"
                    android:icon="@drawable/round_attach_money_24"
                    android:title="@string/nav_unbought" />
                <item
                    android:id="@+id/nav_unsent"
                    android:icon="@drawable/round_send_24"
                    android:title="@string/nav_unsent" />
                </group>
        </menu>
    </item>

</menu>