<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    >

    <Button
        android:id="@+id/btn_select_recipients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_select_recipients"
        />

    <NumberPicker
        android:id="@+id/yearPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/present"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_present"
            android:inputType="textCapSentences"
            android:imeOptions="actionNext"
            style="@style/DialogEditText"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_notes"
            android:inputType="textCapSentences|textMultiLine"
            android:imeOptions="actionDone"
            style="@style/DialogEditText"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/bought"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_bought"
        style="@style/DialogCheckbox"
        />

    <CheckBox
        android:id="@+id/sent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_sent"
        style="@style/DialogCheckbox"
        />

</LinearLayout>