<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <TextView
        android:id="@+id/present"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/btn_delete"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        tools:text="Present name"
        style="@style/DialogTitle"
        />

    <ImageButton
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="@dimen/spacing_tiny"
        app:srcCompat="@drawable/round_delete_24"
        style="@style/Button"
        />

    <TextView
        android:id="@+id/recipient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/present"
        android:layout_marginBottom="@dimen/spacing_normal"
        tools:text="Recipient"
        style="@style/DialogExtraInfo"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_present"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipient"
        >

        <EditText
            android:id="@+id/edit_present"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_present"
            android:inputType="textCapSentences"
            android:imeOptions="actionNext"
            style="@style/DialogEditText"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_present"
        >

        <EditText
            android:id="@+id/edit_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_notes"
            android:inputType="textCapSentences|textMultiLine"
            android:imeOptions="actionDone"
            style="@style/DialogEditText"
            />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/checkbox_bought"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_notes"
        android:text="@string/checkbox_bought"
        style="@style/DialogCheckbox"
        />

    <CheckBox
        android:id="@+id/checkbox_sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/checkbox_bought"
        android:layout_alignBaseline="@id/checkbox_bought"
        android:text="@string/checkbox_sent"
        style="@style/DialogCheckbox"
        />

</RelativeLayout>