<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/normalview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/present"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/btn_edit"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/list_row_title"
            android:layout_marginBottom="8dp"/>

        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:layout_margin="4dp"
            app:srcCompat="@drawable/round_edit_24" />

        <TextView
            android:id="@+id/recipient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_below="@id/present"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipient"
            android:textColor="@color/list_row_title"
            android:textSize="18sp"
            android:minLines="2" />

        <TextView
            android:id="@+id/bought"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_below="@id/notes"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_toRightOf="@id/bought"
            android:layout_alignBaseline="@id/bought"
            android:layout_marginLeft="16dp"/>

    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/editview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:id="@+id/editview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/btn_delete"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/list_row_title"
            android:layout_marginBottom="8dp"/>

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:layout_margin="4dp"
            app:srcCompat="@drawable/round_delete_24" />

        <TextView
            android:id="@+id/editview_recipient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_below="@id/editview_title"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_present"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editview_recipient">

            <EditText
                android:id="@+id/editview_present"
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_present"
                android:imeOptions="actionNext"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_present">

            <EditText
                android:id="@+id/editview_notes"
                android:inputType="textCapSentences|textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_notes"
                android:imeOptions="actionDone"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"/>
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/editview_bought"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/checkbox_bought"
            android:layout_below="@id/input_notes"/>

        <CheckBox
            android:id="@+id/editview_sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/checkbox_sent"
            android:layout_toRightOf="@id/editview_bought"
            android:layout_alignBaseline="@id/editview_bought"/>

    </RelativeLayout>

</RelativeLayout>